<resources>
    <string name="app_name">Pokemon Easy Catch</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="add_owned_games">Add Owned Games</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="number">Number</string>
    <string name="sort">Sort</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="catchRate">catchRate</string>
    <string name="filter">filter</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search_title">search</string>
    <string name="search_hint">hint</string>
    <string name="action_search">search</string>
</resources>
